<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnRecyclerView"
    android:text="@string/recyclerView" />

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnRecyclerViewChat"
    android:text="@string/recyclerViewChat" />

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnDrawerLayout"
    android:text="@string/btnDrawerLayout" />

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnViewPager2"
    android:text="@string/btnViewPager2" />

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnIntentTest1"
    android:text="@string/btnIntentTest1"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnIntentTest2"
    android:text="@string/btnIntentTest2"/>
</LinearLayout>









